  * Add support for fetching Account Settings. (SOCIALTW-47)
  * Add support for fetching Tweet as an oEmbed object. (SOCIALTW-61)
  * Return retweet data when retweeting. (SOCIALTW-67)
  * Include bounding box and geometry data in Place object. (SOCIALTW-36)

Bug Fixes
  * Escape star (*) per Twitter's non-standard URL encoding scheme.
    (SOCIALTW-58)

Spring Social Twitter 1.1.0 Milestone 3 (July 8, 2013)
======================================================
Compatibility Notes:
  * SearchMetadata's getSince_id() and getMax_id() methods were renamed
    to remove the underscores. They are now getSinceId() and getMaxId().
    (SOCIALTW-54)
  * The default constructor has been removed from TwitterTemplate. Now
    that Twitter API 1.1 no longer support unauthorized requests for
    resources, the default constructor offered no value and using it
    would certainly lead to a NotAuthorizedException. (SOCIALTW-50)

Bug Fixes
  * Properly deserialize languageCode from JSON. SOCIALTW-49
  * Fix for missing authorization header in some Twitter API 1.1
    calls. (SOCIALTW-51)
  * Handle Twitter API 1.1's rate limit from an HTTP 429 status.
    (SOCIALTW-53)
  * SearchMetadata's since_id and max_id properties changed from int to
    long. (SOCIALTW-55)
  * Fix TwitterErrorHandler to better handle errors when the response
    body isn't JSON. (SOCIALTW-57)
  * UserTemplate.getRateLimitStatus() fixed to reference correct API
    resource. (SOCIALTW-46)

Improvements
  * Upgraded to Jackson 2
  * Support for Twitter's Streaming API (SOCIALTW-2)
  * Support for Application-Only authorization (SOCIALTW-48)

Spring Social Twitter 1.1.0 Milestone 2 (February 12, 2013)
===================================================
Miscellaneous
  * Changes to support Spring Social/Spring Security integration.
     (SOCIAL-232)

Bug Fixes
  * Set character set to UTF-8 for string parts of multipart messages to allow for