@@ -37,19 +37,6 @@ class PagingUtils {
 		return parameters;
 	}
 
-	public static MultiValueMap<String, String> buildPagingParametersWithPerPage(int page, int pageSize, long sinceId, long maxId) {
-		MultiValueMap<String, String> parameters = new LinkedMultiValueMap<String, String>();
-		parameters.set("page", String.valueOf(page));
-		parameters.set("per_page", String.valueOf(pageSize));
-		if (sinceId > 0) {
-			parameters.set("since_id", String.valueOf(sinceId));
-		}
-		if (maxId > 0) {
-			parameters.set("max_id", String.valueOf(maxId));
-		}
-		return parameters;
-	}
-	
 	public static MultiValueMap<String, String> buildPagingParametersWithCount(int pageSize, long sinceId, long maxId) {
 		MultiValueMap<String, String> parameters = new LinkedMultiValueMap<String, String>();
 		parameters.set("count", String.valueOf(pageSize));
