@@ -83,7 +83,7 @@ class UserTemplate extends AbstractTwitterOperations implements UserOperations {
 
 	public List<TwitterProfile> searchForUsers(String query, int page, int pageSize) {
 		requireUserAuthorization();
-		MultiValueMap<String, String> parameters = PagingUtils.buildPagingParametersWithPerPage(page, pageSize, 0, 0);
+		MultiValueMap<String, String> parameters = PagingUtils.buildPagingParametersWithCount(page, pageSize, 0, 0);
 		parameters.set("q", query);
 		return restTemplate.getForObject(buildUri("users/search.json", parameters), TwitterProfileList.class);
 	}
